--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,5 +6,6 @@
       "redhat.vscode-yaml",
       "redhat.vscode-openshift-connector",
       "redhat.windup-vscode-extension"
+      "redhat.ansible"
     ]
 }
